creating library functional done